# OSLab4

lab4/: CMakeLists.txt  Makefile  a.img  bochsrc  krnl.map  snapshot.txt
lab4/include/: const.h  global.h  proc.h  proto.h  queue.h
lab4/kernel/: console.c  global.c  main.c  proc.c  queue.c  syscall.asm
